# ChangeLog for dev-ruby/haml
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/haml/ChangeLog,v 1.53 2010/10/03 09:25:59 graaff Exp $

  03 Oct 2010; Hans de Graaff <graaff@gentoo.org> haml-3.0.21.ebuild:
  Add ree18 support.

*haml-3.0.21 (02 Oct 2010)

  02 Oct 2010; Hans de Graaff <graaff@gentoo.org> +haml-3.0.21.ebuild:
  Version bump.

  29 Sep 2010; Brent Baude <ranger@gentoo.org> haml-3.0.19.ebuild:
  Marking haml-3.0.19 ~ppc64 for bug 326353

*haml-3.0.19 (29 Sep 2010)

  29 Sep 2010; Hans de Graaff <graaff@gentoo.org> +haml-3.0.19.ebuild:
  Add missing dependency on ruby_parser, used in lib/haml/html/erb.rb which
  is included in tests. Thanks to ranger for reporting in bug 326353.

  28 Sep 2010; Brent Baude <ranger@gentoo.org> haml-3.0.17.ebuild:
  Marking haml-3.0.17 ~ppc for bug 326353

  18 Sep 2010; Hans de Graaff <graaff@gentoo.org> -haml-3.0.13-r1.ebuild,
  -haml-3.0.16.ebuild:
  Remove old versions.

*haml-3.0.17 (29 Aug 2010)

  29 Aug 2010; Hans de Graaff <graaff@gentoo.org> +haml-3.0.17.ebuild:
  Version bump. Depend on rails, not just actionpack, to fix bug 330615.

*haml-3.0.16 (08 Aug 2010)

  08 Aug 2010; Hans de Graaff <graaff@gentoo.org> +haml-3.0.16.ebuild:
  Version bump.

*haml-3.0.13-r1 (30 Jun 2010)

  30 Jun 2010; Hans de Graaff <graaff@gentoo.org> haml-3.0.13.ebuild,
  +haml-3.0.13-r1.ebuild:
  Fix tests by adding a dependency on dev-ruby/erubis, bug 326303. Restrict
  tests in haml-3.0.13 and fix them in -r1. Drop ppc, ppc64 keywords for -r1
  due to new dependency: bug 326353.

*haml-3.0.13 (25 Jun 2010)

  25 Jun 2010; Hans de Graaff <graaff@gentoo.org> +haml-3.0.13.ebuild:
  Version bump.

  22 May 2010; Diego E. Pettenò <flameeyes@gentoo.org> -haml-2.2.23.ebuild,
  haml-2.2.24.ebuild:
  Cleanup old versions, use new syntax.

*haml-2.2.24 (30 Apr 2010)

  30 Apr 2010; Hans de Graaff <graaff@gentoo.org> +haml-2.2.24.ebuild:
  Version bump.
