@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/haml
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/haml/ChangeLog,v 1.53 2010/10/03 09:25:59 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/haml/ChangeLog,v 1.54 2010/10/29 15:28:41 graaff Exp $
+
+  29 Oct 2010; Hans de Graaff <graaff@gentoo.org> -haml-3.0.13.ebuild,
+  -haml-3.0.17.ebuild, -haml-3.0.19.ebuild:
+  Remove old versions.
 
   03 Oct 2010; Hans de Graaff <graaff@gentoo.org> haml-3.0.21.ebuild:
   Add ree18 support.
